--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 <div class="row">
                     <div class="col-6 col-md-4 offset-md-1">
                         <a href="#" class="subheader_logo"><img src="img/Uber.png" alt="logo"></a>
-                        <div class="subheader_official">Официальный партнер Uber в Москве</div>
+                        <div class="subheader_official">Официальный партнер Uber</div>
                     </div>
                     <div class="xs-hidden col-6 col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                         <div class="subheader_call">Звоните нам ежедневно</div>
-                        <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+                        <a href="tel:84957970988" class="subheader_phone">0 495 797 09 88</a>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a href="tel:84957970988" class="xs-visible subheader_phone">8 495 797 09 88</a>
+                        <a href="tel:84957970988" class="xs-visible subheader_phone">0 495 797 09 88</a>
                         <button class="subheader_btn">заказать звонок</button>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                             <li>Деньги перечисляем на карту водителю или наличны-<br>ми в офисе</li>
                         </ul>
                         <div class="require_descr">
-                            В день заработок составляет 7000-12000р + бонус 3000т<br>рублей
+                            В день заработок составляет 7000-12000 + бонус 3000<br>гривен
                         </div>
                     </div>
                     </div>
